# stm8s-discovery-sdcc-blink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
demo-no-peripherial-library/: CMakeLists.txt  README.md
demo-spl/: CMakeLists.txt  README.md  main.c
